syntax = "proto3";

package bjdire.v1;

option csharp_namespace = "GeothermalResearchInstitute.v1";

message AuthenticateRequest {
  string username = 1;
  string password = 2;
}

enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  USER_ROLE_USER = 1;
  USER_ROLE_ADMINISTRATOR = 2;
}

message AuthenticateResponse {
  string nickname = 1;
  UserRole role = 2;
}

service AuthenticationService {
  rpc Authenticate (AuthenticateRequest) returns (AuthenticateResponse) {}
}
