syntax = "proto3";

package bjdire.v1;

import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GeothermalResearchInstitute.v1";

enum DeviceWorkingMode {
  // TODO(zhangshuai.ustc): Confirm the default value.
  DEVICE_WORKING_MODE_UNSPECIFIED = 0;
  // 温度测定
  DEVICE_WORKING_MODE_MEASURE_TEMPERATURE = 1;
  // 稳定热流，恒定热量
  DEVICE_WORKING_MODE_KEEP_WARM_CAPACITY = 2;
  // 稳定热流，恒定冷量
  DEVICE_WORKING_MODE_KEEP_COLD_CAPACITY = 3;
  // 稳定工况，夏季工况
  DEVICE_WORKING_MODE_SUMMER_CONDITION = 4;
  // 稳定工况，冬季工况
  DEVICE_WORKING_MODE_WINTER_CONDITION = 5;
}

enum MotorMode {
  // TODO(zhangshuai.ustc): Confirm the default value.
  MOTOR_MODE_UNSPECIFIED = 0;
  // 变频
  MOTOR_MODE_VARIABLE_FREQUENCY = 1;
  // 工频
  MOTOR_MODE_WORK_FREQUENCY = 2;
}

enum WaterPumpMode {
  // TODO(zhangshuai.ustc): Confirm the default value.
  WATER_PUMP_MODE_UNSPECIFIED = 0;
  // TODO(zhangshuai.ustc): Ask for name.
  WATER_PUMP_MODE_A = 1;
  // TODO(zhangshuai.ustc): Ask for name.
  WATER_PUMP_MODE_B = 2;
}

message DeviceOption {
  // 稳定工况夏季设定温度值
  float summer_temperature = 1;
  // 稳定工况冬季设定温度值
  float winter_temperature = 2;
  // 稳定热流制热量值
  float warm_capacity = 3;
  // 稳定热流制冷量值
  float cold_capacity = 4;
  // 定流量值
  float flow_capacity = 5;
  // 定频率值
  float rate_capacity = 6;

  // 工频/变频状态值
  MotorMode motor_mode = 7;
  // 水泵运行模式值
  WaterPumpMode water_pump_mode = 8;
}

message DeviceMetrics {
  google.protobuf.Timestamp update_timestamp = 1;
  // 出水温度
  float water_out_temperature = 2;
  // 回水温度
  float water_in_temperature = 3;
  // 加热器出水温度
  float heater_water_out_temperature = 4;
  // 环境温度
  float environment_temperature = 5;
  // 出水压力
  float water_out_pressure = 6;
  // 回水压力
  float water_in_pressure = 7;
  // 加热器加热功率
  float heater_power = 8;
  // 流量
  float flow_capacity = 9;
}

message DeviceControls {
  // 设备运行状态
  bool device_power = 1;
  // 排气运行状态
  bool exhaust_power = 2;
  // 热泵自动按键状态
  bool heat_pump_auto = 3;
  // 热泵电源按键状态
  bool heat_pump_power = 4;
  // 热泵风扇按键状态
  bool heat_pump_fan_on = 5;
  // 热泵压缩机按键状态
  bool heat_pump_compressor_on = 6;
  // 热泵四通换向阀状态
  bool heat_pump_four_way_reversing_value = 7;
}

message Device {
  bytes id = 1;
  string name = 2;
  bytes ipv4_address = 3;
  reserved "ipv6_address"; reserved 4;
  DeviceWorkingMode working_mode = 5;
  DeviceOption device_option = 6;
  DeviceMetrics metrics = 7;
  DeviceControls controls = 8;
}

enum DeviceView {
  DEVICE_VIEW_NAME_ONLY = 0;
  DEVICE_VIEW_WORKING_MODE_ONLY = 1;
  DEVICE_VIEW_DEVICE_OPTION_ONLY = 2;
  DEVICE_VIEW_METRICS_AND_CONTROL = 3;
}

message ListDevicesRequest {}

message ListDevicesResponse {
  repeated Device devices = 1;
}

message GetDeviceRequest {
  bytes id = 1;
  DeviceView view = 2;
}

message UpdateDeviceRequest {
  Device device = 1;
  google.protobuf.FieldMask update_mask = 2;
}

message HeartbeatRequest {
  Device device = 1;
}

message HeartbeatResponse {
  Device device = 1;
}

service DeviceService {
  rpc ListDevices (ListDevicesRequest) returns (ListDevicesResponse) {}

  rpc GetDevice (GetDeviceRequest) returns (Device) {}

  rpc UpdateDevice (UpdateDeviceRequest) returns (Device) {}

  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse) {}
}
